Mobile first styles

--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <!-- Font Style links-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | [Testimonials Grid Section]</title>
   </head>
   <body>
     <div class="container">
       <article class="cards">
+        <div class="image">
+          <img
+            src="images/bg-pattern-quotation.svg"
+            alt="Quotation mark icon"
+            class="quotation"
+          />
+        </div>
         <div class="header">
           <img src="images/image-daniel.jpg" alt="Image of Daniel Clifford" />
           <div class="header-content">
-            <h4>Daniel Clifford</h4>
+            <h3>Daniel Clifford</h3>
             <p>Verified Graduate</p>
           </div>
         </div>
@@ -42,7 +56,7 @@
         <div class="header">
           <img src="images/image-jonathan.jpg" alt="" />
           <div class="header-content">
-            <h4>Jonathan Walters</h4>
+            <h3>Jonathan Walters</h3>
             <p>Verified Graduate</p>
           </div>
         </div>
@@ -57,7 +71,7 @@
         <div class="header">
           <img src="images/image-jeanette.jpg" alt="" />
           <div class="header-content">
-            <h4>Jeanette Harmon</h4>
+            <h3>Jeanette Harmon</h3>
             <p>Verified Graduate</p>
           </div>
         </div>
@@ -71,7 +85,7 @@
         <div class="header">
           <img src="images/image-patrick.jpg" alt="" />
           <div class="header-content">
-            <h4>Patrick Abrams</h4>
+            <h3>Patrick Abrams</h3>
             <p>Verified Graduate</p>
           </div>
         </div>
@@ -93,7 +107,7 @@
         <div class="header">
           <img src="images/image-kira.jpg" alt="" />
           <div class="header-content">
-            <h4>Kira Whittle</h4>
+            <h3>Kira Whittle</h3>
             <p>Verified Graduate</p>
           </div>
         </div>
