--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <article class="cards">
+      <article class="cards violet">
         <div class="image">
           <img
             src="images/bg-pattern-quotation.svg"
@@ -52,7 +52,7 @@
           a Software Engineer at a VR startup. ”
         </p>
       </article>
-      <article class="cards">
+      <article class="cards dark-grayish-blue">
         <div class="header">
           <img src="images/image-jonathan.jpg" alt="" />
           <div class="header-content">
@@ -67,7 +67,7 @@
           investments I’ve made in myself. ”
         </p>
       </article>
-      <article class="cards">
+      <article class="cards white">
         <div class="header">
           <img src="images/image-jeanette.jpg" alt="" />
           <div class="header-content">
@@ -81,7 +81,7 @@
           enjoy, and make a good living while doing something I love. ”
         </p>
       </article>
-      <article class="cards">
+      <article class="cards dark-blackish-blue">
         <div class="header">
           <img src="images/image-patrick.jpg" alt="" />
           <div class="header-content">
@@ -103,7 +103,7 @@
           people. ”
         </p>
       </article>
-      <article class="cards">
+      <article class="cards white">
         <div class="header">
           <img src="images/image-kira.jpg" alt="" />
           <div class="header-content">
@@ -131,7 +131,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://github.com/yoo-ssup" target="_blank">Vishwas M J</a>.
     </div>
   </body>
 </html>
