--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           people. ”
         </p>
       </article>
-      <article class="cards white">
+      <article class="cards white item-5">
         <div class="header">
           <img src="images/image-kira.jpg" alt="" />
           <div class="header-content">
